<resources>
    <string name="app_name">TestList</string>
    <string name="action_settings">Change Locale</string>
    <string name="btn_edit_description">Takes user to Edit Button</string>
    <string name="lbl_component_name">Component</string>
    <string name="lbl_name_text">Name</string>
    <string name="lbl_usage_text">Usage</string>
    <string name="lbl_wattage_text">Wattage</string>
    <string name="txt_tip_component">Tip: If the wattage does not appear automatically,
        check the back of the box the component came in.</string>
    <string name="country_malaysia">Malaysia</string>
    <string name="country_usa">USA</string>
    <string name="country_picker_title">Pick a Country</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lbl_units_text">Units</string>
    <string name="cmp_fan">Fan</string>
    <string name="cmp_tube_light">Tube-light</string>
    <string name="other">Other</string>
    <string name="spinner_prompt">Select Component</string>
    <string name="empty_list_text"><![CDATA[<b><font color=#FF0000>Click the Pink Button
    on the bottom to add a new Component</b>]]></string>
    <string name="emptyListText">Click the Pink Button on the bottom to add a new Component</string>
    <string name="txt_name_hint">Example: LCD TV</string>
    <string name="txt_wattage_hint">Example: 800 (Watt)</string>
    <string name="txt_usage_hint">Number of hours used</string>
    <string name="txt_units_hint">Example: 2</string>
    <string name="btn_okay_text">OK</string>
    <string name="btn_cancel_text">CANCEL</string>
    <string name="txt_name_hint_land">Example: LCD TV</string>
    <string name="txt_wattage_hint_land">Example: 800 (Watt)</string>
    <string name="txt_usage_hint_land">Example: 24 (h)</string>
    <string name="txt_units_hint_land">Example: 2</string>
    <string name="btn_undo_text">Reset</string>
    <string name="btn_ok_text">Save</string>

    <string-array name="countries_array">
        <item>@string/country_malaysia</item>
        <item>@string/country_usa</item>
    </string-array>

    <string-array name="components_array">
        <item>@string/cmp_fan</item>
        <item>@string/cmp_tube_light</item>
        <item>@string/other</item>
    </string-array>
</resources>
