<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/labels"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_name_text"
            android:id="@+id/lbl_name"
            android:paddingTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_usage_text"
            android:id="@+id/lbl_usage"
            android:paddingTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_wattage_text"
            android:id="@+id/lbl_wattage"
            android:paddingTop="25dp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/textboxes"
        android:baselineAligned="false"
        android:layout_toRightOf="@id/labels"
        android:layout_margin="25dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_name"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_usage" />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_wattage" />
    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_delete"
        android:clickable="false"
        android:src="@drawable/emptytrash48"
        android:background="@null"
        android:layout_alignTop="@+id/btn_OK"
        android:layout_alignLeft="@+id/labels"
        android:layout_alignStart="@+id/labels"
        android:layout_marginBottom="26dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_undo"
        android:src="@drawable/undo48"
        android:background="@null"
        android:layout_alignTop="@+id/btn_delete"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_OK"
        android:src="@drawable/ok48"
        android:background="@null"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textboxes"
        android:layout_alignEnd="@+id/textboxes" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_tip_component"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

</RelativeLayout>